# AugmentedRealityChess

./: .gitignore  .gitmodules  LICENSE  README.md
Test/Yarrago_Augmented_Reality_1.0.2/: License.txt
Test/Yarrago_Augmented_Reality_1.0.2/Source/: AugmentedReality.cpp  AugmentedReality.hpp  CMakeLists.txt
Test/sunfish/oglc-env/local/: bin
images/markers/: generateBoard.sh  generateBoardWithboarder.sh
kinect2/OpenNI/Platform/Linux/CreateRedist/Final/OpenNI-Bin-Dev-Linux-x64-v1.5.8.5/Documentation/html/: _xn_queue_8h.html  class_xn_event5_args-members.html  class_xn_log_writer_base-members.html  group__cref.html  struct_xn_u_s_b_string_descriptor.html
kinect2/OpenNI/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.7.10/Documentation/html/: struct_xn_module_pose_detection_capability_interface.html
kinect2/OpenNI/Platform/Linux/Redist/OpenNI-Bin-Dev-Linux-x64-v1.5.8.5/Documentation/html/: class_xn_list_t_1_1_const_iterator-members.html  struct_xn_production_node_description.html
pythonAnimations/OBJViewer/: Queen.mtl  backwall.mtl  objloader.py
pythonAnimations/pyOpenGLChess/: Bishop.py  Game.py  GameNoLogic.py  King.py  Knight.py  Pawn.py  Piece.py  Queen.py  README  Rook.py  Undo.py  defines.py  objloader.py  openGLFunctions.py  play.py  playNoLogic.py
pythonAnimations/pyOpenGLChess/engineDirectory/: sunfish.py
pythonAnimations/pyOpenGLChess/engineDirectory/oglc-env/local/: include  lib
