PROJECT( AugmentedReality_proj )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( GLUT REQUIRED )
ADD_EXECUTABLE( AugmentedReality AugmentedReality.cpp )
TARGET_LINK_LIBRARIES( AugmentedReality ${OpenCV_LIBS} ${OPENGL_LIBRARY} ${GLUT_LIBRARY} )
